toolchain/internal/core/analysis/testdata/errors/enums/mixed_types.vdl
// @expect: E301

enum Priority {
  Low = 1
  High = "HIGH"
}
